--- a/packages.config
+++ b/packages.config
@@ -20,6 +20,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.18.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="MySql.Data" version="8.2.0" targetFramework="net472" />
