--- a/Asp Viagens.csproj
+++ b/Asp Viagens.csproj
@@ -222,6 +222,20 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\css\sb-admin-2.css" />
+    <Content Include="Content\css\sb-admin-2.min.css" />
+    <Content Include="Content\img\undraw_posting_photo.svg" />
+    <Content Include="Content\img\undraw_profile.svg" />
+    <Content Include="Content\img\undraw_profile_1.svg" />
+    <Content Include="Content\img\undraw_profile_2.svg" />
+    <Content Include="Content\img\undraw_profile_3.svg" />
+    <Content Include="Content\img\undraw_rocket.svg" />
+    <Content Include="Content\js\demo\chart-area-demo.js" />
+    <Content Include="Content\js\demo\chart-bar-demo.js" />
+    <Content Include="Content\js\demo\chart-pie-demo.js" />
+    <Content Include="Content\js\demo\datatables-demo.js" />
+    <Content Include="Content\js\sb-admin-2.js" />
+    <Content Include="Content\js\sb-admin-2.min.js" />
     <Content Include="Imagens\img-index1.png" />
     <Content Include="Imagens\singapura.png" />
     <Content Include="Imagens\irlanda1.png" />
@@ -250,6 +264,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Styles\navbar.css" />
     <Content Include="Styles\login.css" />
     <Content Include="Styles\carrinho.css" />
     <Content Include="Styles\index.css" />
@@ -272,15 +287,16 @@
     <Content Include="Views\Home\Grafico.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Pagamento.cshtml" />
-    <Content Include="Views\Home\SaibaMais.cshtml" />
     <Content Include="Views\Login\Cadastrar.cshtml" />
     <Content Include="Views\Login\Excluir.cshtml" />
-    <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Plano\EditarPlanoId.cshtml" />
     <Content Include="Views\Plano\Inser_Planos.cshtml" />
     <Content Include="Views\Plano\SaibaMaisPlanos.cshtml" />
     <Content Include="Views\Pacote\CadPacote.cshtml" />
     <Content Include="Views\Pacote\EditarPacoteId.cshtml" />
+    <Content Include="Views\Home\Dashboard.cshtml" />
+    <Content Include="Views\Home\SaibaMais.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
