--- a/Asp Viagens.csproj
+++ b/Asp Viagens.csproj
@@ -200,9 +200,10 @@
     <Compile Include="Models\Banco\Compra\modelCompra.cs" />
     <Compile Include="Models\Banco\Compra\modelPacote.cs" />
     <Compile Include="Models\Banco\Compra\Tipo_Pagamento.cs" />
-    <Compile Include="Models\Banco\Produtos\DataItem.cs" />
+    <Compile Include="Models\Banco\Produtos\FiltrarPlanoPacote.cs" />
     <Compile Include="Models\Banco\Produtos\Pacote.cs" />
     <Compile Include="Models\Banco\Produtos\Plano.cs" />
+    <Compile Include="Models\DataItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -268,6 +269,7 @@
     <Content Include="Styles\login.css" />
     <Content Include="Styles\carrinho.css" />
     <Content Include="Styles\index.css" />
+    <Content Include="Styles\dashboard.css" />
     <Content Include="Styles\reset.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -284,12 +286,11 @@
     <Content Include="Views\Home\confComp.cshtml" />
     <Content Include="Views\Home\ConsTdDetalhes.cshtml" />
     <Content Include="Views\Home\Detalhes.cshtml" />
-    <Content Include="Views\Home\Grafico.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Pagamento.cshtml" />
     <Content Include="Views\Login\Cadastrar.cshtml" />
     <Content Include="Views\Login\Excluir.cshtml" />
-    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Plano\EditarPlanoId.cshtml" />
     <Content Include="Views\Plano\Inser_Planos.cshtml" />
     <Content Include="Views\Plano\SaibaMaisPlanos.cshtml" />
@@ -297,6 +298,8 @@
     <Content Include="Views\Pacote\EditarPacoteId.cshtml" />
     <Content Include="Views\Home\Dashboard.cshtml" />
     <Content Include="Views\Home\SaibaMais.cshtml" />
+    <Content Include="Views\Pacote\FiltrarTodosPacotes.cshtml" />
+    <Content Include="Views\Pacote\ListarTodosPacotes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
